New in v0.5.10 (2009/03/??)
---------------------------
Bug #229826 duplicity crashed with ValueError in port()
https://bugs.launchpad.net/duplicity/+bug/229826


New in v0.5.09 (2009/02/17)
---------------------------
FTP is now driven with pexpect rather than NcFTP utilities.
This closes the following bugs (and solves other problems):
bug #24741: ncftpls -x '' causes failure on Yahoo FTP server
bug #23516: duplicity/ncftpget not closing unlinked files, ...

bug #25509: Logic error in imapbackend.py [IMAP_SERVER]
https://savannah.nongnu.org/bugs/?25509

bug #25512: [Patch] Retry on Imap failure
https://savannah.nongnu.org/bugs/?25512

bug #25530: commandline passwd not working
https://savannah.nongnu.org/bugs/?25530


New in v0.5.08 (2009/02/02)
---------------------------
Turns out going backwards in the license is not as easy as
forwards.  Restoring GPLv3 license until consensus reached.


New in v0.5.07 (2009/01/31)
---------------------------
bug #25293: IOError: [Errno 22] Invalid argument
https://savannah.nongnu.org/bugs/?25293

bug #25379: sys.exit() causes traceback and should not
https://savannah.nongnu.org/bugs/?25379

bug #25403: 0.5.06 "manifests not equal, different volume numbers"
https://savannah.nongnu.org/bugs/?25403

patch #6729: New imap backend. Replaces current gmail backend
https://savannah.nongnu.org/patch/?6729

patch #6730: Fix timing out for SSH backend
https://savannah.nongnu.org/patch/?6730

patch #6733: Improve error handling in imapbackend.py
https://savannah.nongnu.org/patch/?6733

Increase default volume size (--volsize) to 25M from 5M.  This
reduces the number of volumes to accomodate larger backups.

Reworked patch 6701 to list collection one at a time rather than
writing all as one huge list.  Was causing memeory problems when
the collections got large.

Fix backendtest.py so that empty URL's in config.py cause the
backend test to be skipped rather than erroring.  Added notes
in config.py.tmpl explaining the change.
