@@ -1,7 +1,10 @@
 New in v0.5.10 (2009/03/??)
 ---------------------------
-Bug #229826 duplicity crashed with ValueError in port()
+Bug #229826: duplicity crashed with ValueError in port()
 https://bugs.launchpad.net/duplicity/+bug/229826
+
+bug #25097: Allow listing files from any time, not just current time
+https://savannah.nongnu.org/bugs/?25097
 
 
 New in v0.5.09 (2009/02/17)
